--- a/Frontend/Streamify_Frontend/index.html
+++ b/Frontend/Streamify_Frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-gradient-to-t from-[#30cfd0] to-[#330867] min-h-screen">
+  <body class="bg-[#0a2351] min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
