--- a/Frontend/Streamify_Frontend/index.html
+++ b/Frontend/Streamify_Frontend/index.html
@@ -2,9 +2,9 @@
 <html class="dark" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/streamify_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Streamify</title>
   </head>
   <body class="bg-[#002244] min-h-screen">
     <div id="root"></div>
